i18n: update links for Japanese pages

--- a/i18n/locales/japanese/links.json
+++ b/i18n/locales/japanese/links.json
@@ -1,8 +1,8 @@
 {
   "forum": "https://forum.freecodecamp.org/c/japanese/552",
-  "donate": "https://www.freecodecamp.org/donate/",
-  "banner": "https://www.freecodecamp.org/",
-  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
+  "donate": "https://www.freecodecamp.org/japanese/donate/",
+  "banner": "https://www.freecodecamp.org/japanese/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/japanese/learn/",
   "twitter": "https://twitter.com/freecodecampJA",
   "footer": {
     "about": "https://www.freecodecamp.org/japanese/news/about/",
